# yeezy_bot

./: LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  yeezy_inventory_check.py  yeezy_inventory_check.sh
.github/workflows/: ci.yml  daily-run.yml
config/: settings.example.env
docs/: ARCHITECTURE.md  TESTING.md  USER_GUIDE.md
src/sneaker_launchpad/: __init__.py  automation.py  cli.py  config.py  http.py  models.py  repositories.py  services.py
src/sneaker_launchpad/providers/: __init__.py  adidas.py  nike.py
src/sneaker_launchpad/web/: __init__.py  app.py
src/sneaker_launchpad/web/static/: app.js  styles.css
src/sneaker_launchpad/web/templates/: base.html  dashboard.html
tests/: __init__.py  conftest.py  support.py
tests/integration/: test_web_app.py
tests/unit/: test_adidas_provider.py  test_catalog_service.py  test_nike_provider.py  test_purchase_service.py
